--- a/LedMiniDashboard/packageManifest.json
+++ b/LedMiniDashboard/packageManifest.json
@@ -11,18 +11,18 @@
   "apps": [
     {
       "id": "a5578fb7-3eb6-46f2-9eec-cb25fa4a6fdb",
-      "name": "Switch LED Dashboard Manager",
+      "name": "LED Mini-Dashboard Manager",
       "namespace": "nrgup",
-      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/SwitchLedDashboard/SwitchLedDashboardManager.groovy",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/SwitchLedDashboard/LedDashboardManager.groovy",
       "required": true,
       "oauth": false,
       "primary": true
     },
     {
       "id": "a0495dde-b93c-464a-a718-807913f779f4",
-      "name": "Switch LED Dashboard (Inovelli Blue Series)",
+      "name": "LED Mini-Dashboard Topic",
       "namespace": "nrgup",
-      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/SwitchLedDashboard/InovelliLedDashboardChild.groovy",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/SwitchLedDashboard/LedDashboardChild.groovy",
       "required": true,
       "oauth": false,
       "primary": false
