--- a/LedMiniDashboard/packageManifest.json
+++ b/LedMiniDashboard/packageManifest.json
@@ -5,9 +5,9 @@
   "communityLink": "https://community.hubitat.com/t/switch-dashboard-and-switch-notifications/104986",
   "documentationLink": "https://github.com/bradsjm/hubitat-drivers/blob/main/SwitchLedDashboard/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/LICENSE",
-  "version": "0.92",
+  "version": "0.93",
   "dateReleased": "2022-12-29",
-  "releaseNotes": "v0.92 - Beta Testing (Add LED test functionality)",
+  "releaseNotes": "v0.93 - Beta Testing (Updated dashboard sorting)",
   "apps": [
     {
       "id": "a5578fb7-3eb6-46f2-9eec-cb25fa4a6fdb",
