--- a/PhilipsHue/packageManifest.json
+++ b/PhilipsHue/packageManifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "minimumHEVersion": "2.1.9",
   "communityLink": "https://community.hubitat.com/t/beta-philips-hue-rgbw-zigbee-direct-driver/111695",
-  "documentationLink": "",
+  "documentationLink": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/PhilipsHue/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/LICENSE",
   "dateReleased": "2023-02-08",
   "releaseNotes": "First public release",
@@ -13,8 +13,8 @@
       "id": "ed67ff9b-68f1-4353-9c5c-0d8e71c7c6fd",
       "name": "Philips Hue Zigbee RGBW Bulb",
       "namespace": "philips-hue",
-      "location": "",
-      "betaLocation": "",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/PhilipsHue/Philips-Hue-Zigbee-Bulb-RGBW.groovy",
+      "betaLocation": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/development/PhilipsHue/Philips-Hue-Zigbee-Bulb-RGBW.groovy",
       "required": true
     }
   ]
