Building manifest packaging

--- a/PhilipsHue/packageManifest.json
+++ b/PhilipsHue/packageManifest.json
@@ -11,11 +11,27 @@
   "drivers": [
     {
       "id": "ed67ff9b-68f1-4353-9c5c-0d8e71c7c6fd",
-      "name": "Philips Hue Zigbee RGBW Bulb",
+      "name": "Philips Hue Zigbee White and Color Ambience",
       "namespace": "philips-hue",
       "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/PhilipsHue/Philips-Hue-Zigbee-Bulb-RGBW.groovy",
       "betaLocation": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/development/PhilipsHue/Philips-Hue-Zigbee-Bulb-RGBW.groovy",
-      "required": true
+      "required": false
+    },
+    {
+      "id": "3acae55a-91a0-41ed-b250-5b06b7579c45",
+      "name": "Philips Hue White Ambience",
+      "namespace": "philips-hue",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/PhilipsHue/Philips-Hue-Zigbee-Bulb-CT.groovy",
+      "betaLocation": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/development/PhilipsHue/Philips-Hue-Zigbee-Bulb-CT.groovy",
+      "required": false
+    },
+    {
+      "id": "50c4c62b-7bac-4cab-b9e7-9fc70b331f82",
+      "name": "Philips Hue White",
+      "namespace": "philips-hue",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/PhilipsHue/Philips-Hue-Zigbee-Bulb-White.groovy",
+      "betaLocation": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/development/PhilipsHue/Philips-Hue-Zigbee-Bulb-White.groovy",
+      "required": false
     }
   ]
 }
