--- a/ThirdReality/packageManifest.json
+++ b/ThirdReality/packageManifest.json
@@ -4,7 +4,7 @@
   "version": "1.00",
   "minimumHEVersion": "2.3.2",
   "communityLink": "",
-  "documentationLink": "",
+  "documentationLink": "https://raw.githubusercontent.com/bradsjm/hubitat-public/main/ThirdReality/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-public/main/LICENSE",
   "dateReleased": "2023-02-28",
   "releaseNotes": "First public release",
