--- a/PhilipsHue/packageManifest.json
+++ b/PhilipsHue/packageManifest.json
@@ -1,13 +1,13 @@
 {
   "packageName": "Philips Hue Zigbee Drivers",
   "author": "Jonathan Bradshaw",
-  "version": "1.07",
+  "version": "1.08",
   "minimumHEVersion": "2.3.2",
   "communityLink": "https://community.hubitat.com/t/beta-philips-hue-rgbw-zigbee-direct-driver/111695",
   "documentationLink": "https://raw.githubusercontent.com/bradsjm/hubitat-public/main/PhilipsHue/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-public/main/LICENSE",
-  "dateReleased": "2023-04-07",
-  "releaseNotes": "If light is off, set level will transition from level 0. Added known preset hue scenes.",
+  "dateReleased": "2023-04-14",
+  "releaseNotes": "Added manual Zigbee group number configuration for custom scenerios.",
   "drivers": [
     {
       "id": "ed67ff9b-68f1-4353-9c5c-0d8e71c7c6fd",
