--- a/ESPHome/packageManifest.json
+++ b/ESPHome/packageManifest.json
@@ -1,13 +1,13 @@
 {
   "packageName": "ESPHome Native API Library",
   "author": "Jonathan Bradshaw",
-  "version": "1.0.1",
+  "version": "1.1",
   "minimumHEVersion": "2.1.9",
   "communityLink": "https://community.hubitat.com/t/esphome-hubitat/68341",
   "documentationLink": "https://github.com/bradsjm/hubitat-drivers/blob/main/ESPHome/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/LICENSE",
-  "dateReleased": "2022-11-11",
-  "releaseNotes": "v1.0 - Initial Release",
+  "dateReleased": "2023-04-14",
+  "releaseNotes": "v1.1 - Add support for additional ESPHome devices.",
   "bundles": [
     {
       "id": "948fa4dc-8209-442b-b590-749f0ae899a0",
@@ -127,6 +127,14 @@
       "name": "ESPHome Everything Presence One",
       "namespace": "esphome",
       "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/ESPHome/ESPHome-EverythingPresenceOne.groovy",
+      "required": false,
+      "version": "1.0"
+    },
+    {
+      "id": "df14195a-7ffe-409b-acb0-56b172f64956",
+      "name": "ESPHome Upsy Desky",
+      "namespace": "esphome",
+      "location": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/ESPHome/ESPHome-UpsyDesky.groovy",
       "required": false,
       "version": "1.0"
     }
