--- a/ESPHome/packageManifest.json
+++ b/ESPHome/packageManifest.json
@@ -1,13 +1,13 @@
 {
   "packageName": "ESPHome Native API Library",
   "author": "Jonathan Bradshaw",
-  "version": "1.1",
+  "version": "1.2",
   "minimumHEVersion": "2.1.9",
   "communityLink": "https://community.hubitat.com/t/esphome-hubitat/68341",
   "documentationLink": "https://github.com/bradsjm/hubitat-drivers/blob/main/ESPHome/README.md",
   "licenseFile": "https://raw.githubusercontent.com/bradsjm/hubitat-drivers/main/LICENSE",
-  "dateReleased": "2023-04-14",
-  "releaseNotes": "v1.1 - Add support for additional ESPHome devices.",
+  "dateReleased": "2024-03-03",
+  "releaseNotes": "v1.2 - Add support for calling ESPHome user-defined services.",
   "bundles": [
     {
       "id": "948fa4dc-8209-442b-b590-749f0ae899a0",
